--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,17 +6,16 @@ body {
 }
 
 body {
+  background: rgba(238, 238, 238, 1);
+}
+
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-  height: 100%;
-  background: rgba(238, 238, 238, 1);
 }
 
 /*remove border radius from top nav*/
