--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,8 +60,9 @@ body {
 }
 
 .formButtonGroup {
-  height: 100%;
+  height: 30%;
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-end;
   padding: 0.5em 0 1em 0;
 }
